serializable KNN models